update scss and html

--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -76,6 +76,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    height: 35px;
 }
 .footer__support-container svg {
     fill: #d5a54e;
