--- a/#src/scss/skating.scss
+++ b/#src/scss/skating.scss
@@ -5,212 +5,238 @@
     width: 100%;
     z-index: 20;
     background-color: #000;
-}
-.skating__line-black {
-    background-color: #000;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 101px;
-}
-.skating__bg {
-    width: 100%;
-    height: 3400px;
-    background-color: #000;
-    position: absolute;
-    left: 0;
-    top: 0;
-}
-.skating__list-top {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 20px;
-    margin-top: 50px;
-    border-top: 1.5px solid #fff;
-}
-.skating__item {
-    width: 100%;
-    list-style: none;
-    height: 100px;
-    border-right: 1.5px solid #fff;
-    color: #fff;
-}
-.skating__item:last-child {
-    border-right: 0;
-}
-.skating__item-1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.skating__item-title {
-    color: red;
-    font-family: "Mak";
-    font-size: 28px;
-    line-height: 30px;
-    font-weight: 600;
-}
-.skating__item-2 {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0px 0px 0px 15px;
-}
-.skating__item-font span {
-    color: #fff;
-    font-family: "Mak";
-    font-size: 18px;
-    line-height: 30px;
-    font-weight: 600;
-}
-.skating__item-3 {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0px 0px 0px 15px;
-}
-.skating__item-author span {
-    color: #fff;
-    font-family: "Mak";
-    font-size: 18px;
-    line-height: 30px;
-    font-weight: 600;
-}
-.skating__item-4 {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0px 0px 0px 15px;
-}
-.skating__item-number span {
-    color: #fff;
-    font-family: "Mak";
-    font-size: 20px;
-    line-height: 30px;
-    font-weight: 700;
-}
-.skating__images-1 {
-    width: 1300px;
-    height: 550px;
-    position: absolute;
-    top: 190px;
-    left: 110px;
-    background: url(../img/skating/1.jpg) no-repeat 50% 50%;
-    background-size: cover;
-}
-.skating__images-2 {
-    width: 800px;
-    height: 900px;
-    position: absolute;
-    top: 500px;
-    right: -50px;
-    z-index: 30;
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    background: url(../img/skating/3.jpg) no-repeat 100% 90%;
-    background-size: cover;
-}
-.skating__images-3 {
-    width: 900px;
-    height: 500px;
-    position: absolute;
-    top: 1400px;
-    left: 90px;
-    overflow: hidden;
-    transform: rotate(337deg);
-}
-.skating__img-3 {
-    position: absolute;
-    top: -135%;
-    left: 0;
-    object-fit: cover;
-    width: 100%;
-}
-.skating__images-4 {
-    width: 879px;
-    height: 500px;
-    position: absolute;
-    top: 1800px;
-    right: 50px;
-    transform: rotate(337deg);
-    overflow: hidden;
-}
-.skating__img-4 {
-    position: absolute;
-    top: -60%;
-    left: 0;
-    object-fit: cover;
-    width: 100%;
-}
-.skating__images-5 {
-    width: 1000px;
-    height: 500px;
-    position: absolute;
-    top: 2550px;
-    left: 90px;
-    z-index: 2;
-    transform: rotate(355deg) !important;
-    overflow: hidden;
-}
-.skating__img-5 {
-    position: absolute;
-    top: -135%;
-    left: 0;
-    object-fit: cover;
-    width: 100%;
-}
-.skating__list-bottom {
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 20px;
-    margin-bottom: 100px;
-    border-bottom: 1.5px solid #fff;
-    width: 100%;
-}
-.skating__text-1 {
-    position: absolute;
-    top: 1090px;
-    left: 110px;
-    width: 1000px;
-    height: 200px;
-    z-index: 40;
-    color: red;
-    font-size: 72px;
-    font-weight: 700;
-}
-.skating__text-2 {
-    position: absolute;
-    top: 1860px;
-    left: 200px;
-    width: 1000px;
-    height: 200px;
-    z-index: 1;
-    transform: rotate(-23deg) !important;
-    color: red;
-    font-size: 72px;
-    font-weight: 700;
-}
-.skating__item-4 {
-    display: flex;
-    justify-content: space-between;
-}
-.skating__item-circle-1 {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background: red;
-    margin-left: 250px;
-}
-.skating__item-circle-2 {
-    width: 30px;
-    height: 60px;
-    border-radius: 100% 0 0 100% / 50% 0 0 50%;
-    background: red;
+    &__line {
+        &-black {
+            background-color: #000;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: 101px;
+        }
+    }
+    &__bg {
+        width: 100%;
+        height: 3400px;
+        background-color: #000;
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+    &__list {
+        &-top {
+            display: flex;
+            justify-content: space-between;
+            padding: 0 20px;
+            margin-top: 50px;
+            border-top: 1.5px solid #fff;
+        }
+    }
+    &__item {
+        width: 100%;
+        list-style: none;
+        height: 100px;
+        border-right: 1.5px solid #fff;
+        color: #fff;
+        &:last-child {
+            border-right: 0;
+        }
+        &-1 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        &-title {
+            color: red;
+            font-family: "Mak";
+            font-size: 28px;
+            line-height: 30px;
+            font-weight: 600;
+        }
+        &-2 {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            margin: 0px 0px 0px 15px;
+        }
+        &-font {
+            & span {
+                color: #fff;
+                font-family: "Mak";
+                font-size: 18px;
+                line-height: 30px;
+                font-weight: 600;
+            }
+        }
+        &-3 {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            margin: 0px 0px 0px 15px;
+        }
+        &-author {
+            & span {
+                color: #fff;
+                font-family: "Mak";
+                font-size: 18px;
+                line-height: 30px;
+                font-weight: 600;
+            }
+        }
+        &-4 {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            margin: 0px 0px 0px 15px;
+        }
+        &-number {
+            & span {
+                color: #fff;
+                font-family: "Mak";
+                font-size: 20px;
+                line-height: 30px;
+                font-weight: 700;
+            }
+        }
+        &-circle {
+            &-1 {
+                width: 60px;
+                height: 60px;
+                border-radius: 50%;
+                background: red;
+                margin-left: 250px;
+            }
+            &-2 {
+                width: 30px;
+                height: 60px;
+                border-radius: 100% 0 0 100% / 50% 0 0 50%;
+                background: red;
+            }
+        }
+    }
+    &__images {
+        &-1 {
+            width: 1300px;
+            height: 550px;
+            position: absolute;
+            top: 190px;
+            left: 110px;
+            background: url(../img/skating/1.jpg) no-repeat 50% 50%;
+            background-size: cover;
+        }
+        &-2 {
+            width: 800px;
+            height: 900px;
+            position: absolute;
+            top: 500px;
+            right: -50px;
+            z-index: 30;
+            display: flex;
+            justify-content: center;
+            overflow: hidden;
+            background: url(../img/skating/3.jpg) no-repeat 100% 90%;
+            background-size: cover;
+        }
+        &-3 {
+            width: 900px;
+            height: 500px;
+            position: absolute;
+            top: 1400px;
+            left: 90px;
+            overflow: hidden;
+            transform: rotate(337deg);
+        }
+        &-4 {
+            width: 879px;
+            height: 500px;
+            position: absolute;
+            top: 1800px;
+            right: 50px;
+            transform: rotate(337deg);
+            overflow: hidden;
+        }
+        &-5 {
+            width: 1000px;
+            height: 500px;
+            position: absolute;
+            top: 2550px;
+            left: 90px;
+            z-index: 2;
+            transform: rotate(355deg) !important;
+            overflow: hidden;
+        }
+    }
+    &__img {
+        &-3 {
+            position: absolute;
+            top: -135%;
+            left: 0;
+            object-fit: cover;
+            width: 100%;
+        }
+        &-4 {
+            position: absolute;
+            top: -60%;
+            left: 0;
+            object-fit: cover;
+            width: 100%;
+        }
+        &-5 {
+            position: absolute;
+            top: -135%;
+            left: 0;
+            object-fit: cover;
+            width: 100%;
+        }
+    }
+    &__list {
+        &-bottom {
+            position: absolute;
+            bottom: 0;
+            display: flex;
+            justify-content: space-between;
+            padding: 0 20px;
+            margin-bottom: 100px;
+            border-bottom: 1.5px solid #fff;
+            width: 100%;
+        }
+    }
+    &__text {
+        &-1 {
+            position: absolute;
+            top: 1090px;
+            left: 110px;
+            width: 1000px;
+            height: 200px;
+            z-index: 40;
+            color: red;
+            font-size: 72px;
+            font-weight: 700;
+        }
+        &-2 {
+            position: absolute;
+            top: 1860px;
+            left: 200px;
+            width: 1000px;
+            height: 200px;
+            z-index: 1;
+            transform: rotate(-23deg) !important;
+            color: red;
+            font-size: 72px;
+            font-weight: 700;
+        }
+    }
+    &__circle {
+        &-container {
+            width: 250px;
+            height: 250px;
+            position: absolute;
+            top: 2400px;
+            right: 390px;
+            z-index: 1000;
+        }
+    }
 }
 .circle__img {
     width: 250px;
@@ -219,11 +245,4 @@
 	background-size: cover;
     border-radius: 50%;
 }
-.skating__circle-container {
-    width: 250px;
-    height: 250px;
-    position: absolute;
-    top: 2400px;
-    right: 390px;
-    z-index: 1000;
-}
+
