--- a/#src/scss/skating.scss
+++ b/#src/scss/skating.scss
@@ -4,10 +4,10 @@
     position: relative;
     width: 100%;
     z-index: 20;
-    background-color: #000;
+    background-color: $black;
     &__line {
         &-black {
-            background-color: #000;
+            background-color: $black;
             position: absolute;
             left: 0;
             right: 0;
@@ -19,7 +19,7 @@
     &__bg {
         width: 100%;
         height: 3400px;
-        background-color: #000;
+        background-color: $black;
         position: absolute;
         left: 0;
         top: 0;
@@ -30,15 +30,15 @@
             justify-content: space-between;
             padding: 0 20px;
             margin-top: 50px;
-            border-top: 1.5px solid #fff;
+            border-top: 1.5px solid $white;
         }
     }
     &__item {
         width: 100%;
         list-style: none;
         height: 100px;
-        border-right: 1.5px solid #fff;
-        color: #fff;
+        border-right: 1.5px solid $white;
+        color: $white;
         &:last-child {
             border-right: 0;
         }
@@ -48,7 +48,7 @@
             align-items: center;
         }
         &-title {
-            color: red;
+            color: $red;
             font-family: "Mak";
             font-size: 28px;
             line-height: 30px;
@@ -62,7 +62,7 @@
         }
         &-font {
             & span {
-                color: #fff;
+                color: $white;
                 font-family: "Mak";
                 font-size: 18px;
                 line-height: 30px;
@@ -77,7 +77,7 @@
         }
         &-author {
             & span {
-                color: #fff;
+                color: $white;
                 font-family: "Mak";
                 font-size: 18px;
                 line-height: 30px;
@@ -92,7 +92,7 @@
         }
         &-number {
             & span {
-                color: #fff;
+                color: $white;
                 font-family: "Mak";
                 font-size: 20px;
                 line-height: 30px;
@@ -104,14 +104,14 @@
                 width: 60px;
                 height: 60px;
                 border-radius: 50%;
-                background: red;
+                background:$red;
                 margin-left: 250px;
             }
             &-2 {
                 width: 30px;
                 height: 60px;
                 border-radius: 100% 0 0 100% / 50% 0 0 50%;
-                background: red;
+                background:$red;
             }
         }
     }
@@ -198,7 +198,7 @@
             justify-content: space-between;
             padding: 0 20px;
             margin-bottom: 100px;
-            border-bottom: 1.5px solid #fff;
+            border-bottom: 1.5px solid $white;
             width: 100%;
         }
     }
@@ -210,7 +210,7 @@
             width: 1000px;
             height: 200px;
             z-index: 40;
-            color: red;
+            color: $red;
             font-size: 72px;
             font-weight: 700;
         }
@@ -222,7 +222,7 @@
             height: 200px;
             z-index: 1;
             transform: rotate(-23deg) !important;
-            color: red;
+            color:$red;
             font-size: 72px;
             font-weight: 700;
         }
