--- a/#src/scss/poster.scss
+++ b/#src/scss/poster.scss
@@ -4,157 +4,172 @@
     position: relative;
     width: 100%;
     z-index: 20;
-    background-color: #1e4029;
+    background-color: $green;
+    &__line {
+        &-black {
+            background-color: $black;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: 101px;
+        }
+    }
+    &__bg {
+        width: 80%;
+        height: 2950px;
+        background-color: $dark-red;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    &__list {
+        &-top {
+            display: flex;
+            justify-content: space-between;
+            padding: 0 20px;
+            margin-top: 50px;
+            border-top: 1.5px solid $black;
+        }
+        &-bottom {
+            position: absolute;
+            bottom: 0;
+            display: flex;
+            justify-content: space-between;
+            padding: 0 20px;
+            margin-bottom: 100px;
+            border-bottom: 1.5px solid $black;
+            width: 100%;
+        }
+    }
+    &__item {
+        width: 100%;
+        list-style: none;
+        height: 100px;
+        border-right: 1.5px solid $black;
+        &:last-child {
+            border-right: 0;
+        }
+        &-1 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        &-title {
+            color: $golden;
+            font-family: "Mak";
+            font-size: 28px;
+            line-height: 30px;
+            font-weight: 600;
+        }
+        &-2 {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            margin: 0px 0px 0px 15px;
+        }
+        &-font {
+            & span {
+                color: $black;
+                font-family: "Mak";
+                font-size: 18px;
+                line-height: 30px;
+                font-weight: 600;
+            }
+        }
+        &-3 {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            margin: 0px 0px 0px 15px;
+        }
+        &-author {
+            & span {
+                color: $black;
+                font-family: "Mak";
+                font-size: 18px;
+                line-height: 30px;
+                font-weight: 600;
+            }
+        }
+        &-4 {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            margin: 0px 0px 0px 15px;
+        }
+        &-number {
+            & span {
+                color: $black;
+                font-family: "Mak";
+                font-size: 20px;
+                line-height: 30px;
+                font-weight: 700;
+            }
+        }
+    }
+    &__images {
+        &-1 {
+            width: 1450px;
+            height: 750px;
+            position: absolute;
+            top: 170px;
+            left: 50px;
+            background: url(../img/underground/2.jpg) no-repeat 50% 50%;
+            background-size: cover;
+        }
+        &-2 {
+            width: 800px;
+            height: 900px;
+            position: absolute;
+            top: 800px;
+            right: -40px;
+            z-index: 30;
+            display: flex;
+            justify-content: center;
+            overflow: hidden;
+            background: url(../img/underground/3.jpg) no-repeat 50% 50%;
+            background-size: cover;
+                }
+        &-3 {
+            width: 1300px;
+            height: 900px;
+            position: absolute;
+            top: 1770px;
+            left: 90px;
+            background: url(../img/underground/4.jpg) no-repeat 50% 50%;
+            background-size: cover;
+        }
+    }
+    &__text {
+        &-1 {
+            position: absolute;
+            top: 1090px;
+            left: 0px;
+            width: 1000px;
+            height: 200px;
+            z-index: 1;
+            transform: rotate(270deg) !important;
+            color: $golden;
+            font-size: 72px;
+            font-weight: 700;
+            transition: .4s ease;
+        }
+        &-2 {
+            position: absolute;
+            top: 2290px;
+            left: 920px;
+            width: 1000px;
+            height: 200px;
+            z-index: 1;
+            transform: rotate(-270deg) !important;
+            color: $golden;
+            font-size: 72px;
+            font-weight: 700;
+            transition: .4s ease;
+        }
+    }
 }
-.poster__line-black {
-    background-color: #000;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 101px;
-}
-.poster__bg {
-    width: 80%;
-    height: 2950px;
-    background-color: #521714;
-    position: absolute;
-    right: 0;
-    top: 0;
-}
-.poster__list-top {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 20px;
-    margin-top: 50px;
-    border-top: 1.5px solid #111;
-}
-.poster__item {
-    width: 100%;
-    list-style: none;
-    height: 100px;
-    border-right: 1.5px solid #111;
-}
-.poster__item:last-child {
-    border-right: 0;
-}
-.poster__item-1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.poster__item-title {
-    color: #d5a54e;
-    font-family: "Mak";
-    font-size: 28px;
-    line-height: 30px;
-    font-weight: 600;
-}
-.poster__item-2 {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0px 0px 0px 15px;
-}
-.poster__item-font span {
-    color: #111;
-    font-family: "Mak";
-    font-size: 18px;
-    line-height: 30px;
-    font-weight: 600;
-}
-.poster__item-3 {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0px 0px 0px 15px;
-}
-.poster__item-author span {
-    color: #111;
-    font-family: "Mak";
-    font-size: 18px;
-    line-height: 30px;
-    font-weight: 600;
-}
-.poster__item-4 {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0px 0px 0px 15px;
-}
-.poster__item-number span {
-    color: #111;
-    font-family: "Mak";
-    font-size: 20px;
-    line-height: 30px;
-    font-weight: 700;
-}
-.poster__images-1 {
-    width: 1450px;
-    height: 750px;
-    position: absolute;
-    top: 170px;
-    left: 50px;
-    background: url(../img/underground/2.jpg) no-repeat 50% 50%;
-    background-size: cover;
-}
-.poster__images-2 {
-    width: 800px;
-    height: 900px;
-    position: absolute;
-    top: 800px;
-    right: -40px;
-    z-index: 30;
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    background: url(../img/underground/3.jpg) no-repeat 50% 50%;
-    background-size: cover;
-}
-.poster__images-3 {
-    width: 1300px;
-    height: 900px;
-    position: absolute;
-    top: 1770px;
-    left: 90px;
-    background: url(../img/underground/4.jpg) no-repeat 50% 50%;
-    background-size: cover;
-}
-.poster__list-bottom {
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 20px;
-    margin-bottom: 100px;
-    border-bottom: 1.5px solid #111;
-    width: 100%;
-}
-.poster__text-1 {
-    position: absolute;
-    top: 1090px;
-    left: 0px;
-    width: 1000px;
-    height: 200px;
-    z-index: 1;
-    transform: rotate(270deg) !important;
-    color: #d5a54e;
-    font-size: 72px;
-    font-weight: 700;
-    transition: .4s ease;
-}
-.poster__text-2 {
-    position: absolute;
-    top: 2290px;
-    left: 920px;
-    width: 1000px;
-    height: 200px;
-    z-index: 1;
-    transform: rotate(-270deg) !important;
-    color: #d5a54e;
-    font-size: 72px;
-    font-weight: 700;
-    transition: .4s ease;
-}
+
 
